# eel

./: .gitignore  TODO  cfg-all
docs/: Gemfile  _config.yml  about.md  download.md  index.md  todo.md
docs/_data/: menu.yml
docs/_layouts/: default.html
docs/_sass/: style.scss
docs/assets/js/: eel.js
docs/docs/: codingstyle.md  contributing.md  examples.md  extending.md  gettingstarted.md  helping.md  index.md  language.md
docs/docs/examples/: test1.c  test1.eel
docs/docs/modules/: dir.md  dsp.md  eelium.md  index.md  io.md  loader.md  math.md  system.md
docs/themes/eel/_sass/: style.scss
examples/: main.c  main.cpp  main2.c  test.eel
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt
src/core/: CMakeLists.txt  builtin.eel  e_builtin.c  e_module.c  e_state.c  e_state.h  e_vm.c
src/eelium/: CMakeLists.txt  IMG_savepng.c  eel_image.c  eel_net.c  eel_opengl.c  eel_opengl.h  eel_sdl.c  eel_sdl.h
src/executive/: CMakeLists.txt  eel.c
src/modules/: CMakeLists.txt
src/modules/dir/: CMakeLists.txt
src/modules/dsp/: CMakeLists.txt
src/modules/io/: CMakeLists.txt
src/modules/loader/: CMakeLists.txt  builtin-loader.eel  eel_loader.c  eel_loader.h
src/modules/math/: CMakeLists.txt
src/modules/system/: CMakeLists.txt  eel_system.c
test/: CMakeLists.txt  eeltest.c
test/eelium/: addsynth.eel  balls2.eel  beep.eel  chat.eel  chat2.eel  chat3.eel  gltest.eel  zsgl.eel  zsgl2.eel  zstest.eel
